--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="300dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="8dp">
 
@@ -8,11 +8,14 @@
         android:id="@+id/showMessage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:maxWidth="300dp"
         android:layout_marginLeft="5dp"
         android:background="@drawable/background_left"
         android:padding="8dp"
         android:text="Hello"
         android:textColor="@color/white"
-        android:textSize="18dp" />
+        android:textSize="18dp"
+        android:clickable="true"
+        android:focusable="true" />
 
 </RelativeLayout>
