--- a/app/src/main/res/layout/translation_settings.xml
+++ b/app/src/main/res/layout/translation_settings.xml
@@ -16,18 +16,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:layout_marginVertical="20sp"/>
 
     <TextView
         android:text="@string/default_translation_language"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18sp" />
+        android:textSize="18sp"
+        android:layout_marginTop="10sp"/>
 
     <Spinner
         android:id="@+id/translation_language_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        android:layout_marginVertical="20sp"/>
 
 </LinearLayout>
