--- a/app/src/main/res/layout/chat_item_left.xml
+++ b/app/src/main/res/layout/chat_item_left.xml
@@ -12,7 +12,7 @@
         android:layout_marginLeft="5dp"
         android:background="@drawable/background_left"
         android:padding="8dp"
-        android:text="Hello"
+        android:text="@string/chat_demo_text"
         android:textColor="@color/white"
         android:textSize="18dp"
         android:clickable="true"
