--- a/app/src/main/res/layout/chat_list_item.xml
+++ b/app/src/main/res/layout/chat_list_item.xml
@@ -29,7 +29,7 @@
             android:textSize="24dp"
             android:textStyle="bold"
             android:textColor="@color/darkGrey"
-            android:text="Service Name"/>
+            android:text="@string/demo_service_name"/>
 
         <TextView
             android:id="@+id/tv_service_description"
@@ -38,7 +38,7 @@
             android:gravity="center_vertical"
             android:textSize="16dp"
             android:textColor="@color/darkGrey"
-            android:text="Service description"/>
+            android:text="@string/demo_service_description"/>
     </LinearLayout>
 
 </LinearLayout>
