--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/option_config" android:title="@string/configuration"/>
+    <item android:id="@+id/option_config" android:title="@string/settings"/>
     <item android:id="@+id/option_clear_all" android:title="@string/clear_all_chats"/>
     <item android:id="@+id/option_about" android:title="About"/>
 </menu>
